"cover" section refactoring: 1. Corrected errors in <section class="cover"> in index.html 2. Corrected background size in media-queries in .cover 3. Corrected z-indexes to avoid (sub)title shadowing on hover.

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin: calc(35px + (100vw - 320px) * 0.1786) auto
     calc(16px + (100vw - 320px) * 0.0357) auto;
-  z-index: 2;
+  z-index: 3;
   width: 250px;
 }
 
